Code change for add new field

--- a/SampleMVCProject/Views/Home/Register.cshtml
+++ b/SampleMVCProject/Views/Home/Register.cshtml
@@ -1,51 +1,105 @@
 ﻿@model SampleMVCProject.Models.RegisterViewModel
 
 @{
-   
+
     ViewData["Title"] = "Register";
 }
 
 <div class="register-container">
-    <h2 class="register-title">Register</h2>
+    <h2 class="register-title">Registration</h2>
 
-    <form asp-action="Register" method="post">
+    <form asp-action="Registration" method="post">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-        <table class="table-form">
+        <table class="table-form" border="0">
             <tr>
                 <td><label asp-for="Name" class="form-label"></label></td>
                 <td>
                     <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
                 </td>
+                <td><span asp-validation-for="Name" style="margin-left:10px" class="text-danger"></span></td>
+
             </tr>
 
             <tr>
                 <td><label asp-for="Email" class="form-label"></label></td>
                 <td>
                     <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
                 </td>
+                <td><span asp-validation-for="Email" style="margin-left:10px" class="text-danger"></span></td>
             </tr>
-
+            <tr>
+                <td><label asp-for="PhoneNumber" class="form-label"></label></td>
+                <td>
+                    <input asp-for="PhoneNumber" class="form-control" />
+                </td>
+                <td><span asp-validation-for="PhoneNumber" style="margin-left:10px" class="text-danger"></span></td>
+            </tr>
+            <tr>
+                <td><label asp-for="DateOfBirth" class="form-label"></label></td>
+                <td>
+                    <input asp-for="DateOfBirth" type="date" class="form-control" />
+                </td>
+                <td><span asp-validation-for="DateOfBirth" style="margin-left:10px" class="text-danger"></span></td>
+            </tr>
+            <tr>
+                <td><label asp-for="Gender" class="form-label"></label></td>
+                <td>
+                    <select asp-for="Gender" class="form-control">
+                        <option value="">--Select--</option>
+                        <option>Male</option>
+                        <option>Female</option>
+                        <option>Other</option>
+                    </select>
+                </td>
+                <td><span asp-validation-for="Gender" style="margin-left:10px" class="text-danger"></span></td>
+            </tr>
+            <tr>
+                <td><label asp-for="Address" class="form-label"></label></td>
+                <td>
+                    <textarea asp-for="Address" class="form-control"></textarea>
+                </td>
+                <td><span asp-validation-for="Address" style="margin-left:10px" class="text-danger"></span></td>
+            </tr>
+            <tr>
+                <td><label asp-for="Country" class="form-label"></label></td>
+                <td>
+                    <input asp-for="Country" class="form-control" />
+                </td>
+                <td><span asp-validation-for="Country" style="margin-left:10px" class="text-danger"></span></td>
+            </tr>
+            <tr>
+                <td><label asp-for="State" class="form-label"></label></td>
+                <td>
+                    <input asp-for="State" class="form-control" />
+                </td>
+                <td><span asp-validation-for="State" style="margin-left:10px" class="text-danger"></span></td>
+            </tr>
+            <tr>
+                <td><label asp-for="City" class="form-label"></label></td>
+                <td>
+                    <input asp-for="City" class="form-control" />
+                </td>
+                <td><span asp-validation-for="City" style="margin-left:10px" class="text-danger"></span></td>
+            </tr>
             <tr>
                 <td><label asp-for="Password" class="form-label"></label></td>
                 <td>
                     <input asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
                 </td>
+                <td><span asp-validation-for="Password" style="margin-left:10px" class="text-danger"></span></td>
             </tr>
 
             <tr>
                 <td><label asp-for="ConfirmPassword" class="form-label"></label></td>
                 <td>
                     <input asp-for="ConfirmPassword" class="form-control" />
-                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </td>
+                <td><span asp-validation-for="ConfirmPassword" style="margin-left:10px" class="text-danger"></span></td>
             </tr>
             <tr></tr>
-            <tr>
-                <td colspan="2" style="text-align:center;">
+             <tr>
+                <td colspan="2" style="text-align:center;margin-top:10px">
                     <button type="submit" class="btn-register">Register</button>
                 </td>
             </tr>
