--- a/SampleMVCProject/Views/Home/Register.cshtml
+++ b/SampleMVCProject/Views/Home/Register.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="register-container">
-    <h2 class="register-title">Registration</h2>
+    <h2 class="register-title">RegistrationPage</h2>
 
     <form asp-action="Registration" method="post">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
