--- a/SampleMVCProject/Views/Home/Register.cshtml
+++ b/SampleMVCProject/Views/Home/Register.cshtml
@@ -8,7 +8,7 @@
 <div class="register-container">
     <h2 class="register-title">RegistrationPage</h2>
 
-    <form asp-action="Registration" method="post">
+    <form asp-action="Register" method="post">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
         <table class="table-form" border="0">
